@@ -118,6 +118,7 @@ text.configDetect.failed=A total of %d connection attempts were made. %d of them
 text.configDetect.success=The selected number of threads of %d works perfectly on your machine.
 text.scan.new=New scan
 text.scan.confirmation=Discard previous scanning results?
+text.scan.resume=Last loaded IP is %LASTIP.\nResume loaded scan until %ENDIP?
 text.scan.completed=Scanning completed
 text.scan.incomplete=Scanning incomplete
 text.scan.aborted=Scanning aborted
