@@ -2,6 +2,7 @@ Changes in 3.4:
 - Openers can open several IPs at ones
 - More bugfixes in opener editor + OK/Cancel buttons
 - Loading of exported files will no longer try to rescan the last loaded IP
+- User is asked whether to resume the loaded scan if it seems unfinished
 - Fixed MAC address fetcher for Mac OS
 - MAC vendors updated
 - Internal and plugins: Dagger is now used instead of PicoContainer for dependency injection
